--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "mocha": "^6.2.1",
         "react": "^16.10.1",
         "react-dom": "^16.10.1",
         "react-router": "^5.1.2",
@@ -15,7 +16,7 @@
     "scripts": {
         "start": "react-scripts start client",
         "build": "react-scripts build",
-        "test": "react-scripts test",
+        "test": "react-scripts test --env=jsdom --verbose",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -34,6 +35,10 @@
         ]
     },
     "devDependencies": {
+        "enzyme": "^3.10.0",
+        "enzyme-adapter-react-16": "^1.14.0",
+        "jest": "^24.9.0",
+        "jest-enzyme": "^7.1.1",
         "react-redux": "^7.1.1"
     }
 }
