--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "scripts": {
         "start": "react-scripts start client",
         "build": "react-scripts build",
-        "test": "react-scripts test --env=jsdom --verbose",
+        "test": "react-scripts test --env=jsdom --verbose a",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
